# Cloud_Classifier

./: README.md  app.py  main.py  pyproject.toml
data/raw_data/clouds_data/processed_train_data/: clouds_train.pth
notebooks/: classes.pth  cloud_classes.pth  demoPyTorch&POO.ipynb  demoPyTorch.ipynb  demoPyTorchCloudsProjects.ipynb  demoTorchNeuralNet.ipynb  demosPyTorchReLU.ipynb
src/: cloud_classifier.py  cloud_dataset.py  cloud_evaluator.py  cloud_predictor.py
